add commands to openapi, add basic handler for each send command, handling each command.
Currently nonfunctional as it crashes out after connect.
